# psy-maps

./: .appveyor.yml  .buildinfo  .cruft.json  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  appveyor.yml  contribute.html  contributing.html  genindex.html  index.html  installing.html  objects.inv  plot_methods.html  py-modindex.html  pyproject.toml  readthedocs.yml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  versioneer.py
.circleci/: config.yml
.github/: issue_template.md
_modules/: index.html
_modules/psy_maps/: plotters.html  plugin.html  widgets.html
_sources/: contribute.rst.txt  index.rst.txt  installing.rst.txt  plot_methods.rst.txt
_sources/api/: psy_maps.boxes.rst.txt  psy_maps.plotters.rst.txt  psy_maps.plugin.rst.txt  psy_maps.rst.txt  psy_maps.widgets.rst.txt
_static/: documentation_options.js
api/: psy_maps.boxes.html  psy_maps.html  psy_maps.plotters.html  psy_maps.plugin.html  psy_maps.widgets.html
ci/: check_ref_deploy.py  deploy.py  enhance_recipe.py  requirements.txt  setup_append.py  update_reference_submodule.py  update_submodules.py  utils.py
ci/conda-recipe/: meta.yaml
docs/: api.rst  apigen.bash  conf.py  contribute.rst  environment.yml  index.rst  installing.rst  plot_methods.rst  requirements.txt
docs/_templates/: layout.html
docs/api/: psy_maps.boxes.rst  psy_maps.plotters.rst  psy_maps.plugin.rst  psy_maps.rst  (+1 more)
examples/: G10010_SIBT1850_v1.1._2013-01-15_circumpolar.nc  README.rst  example_circumpolar.ipynb  example_icon.ipynb  example_mapplotters.ipynb  example_ugrid.ipynb  icon_grid_demo.nc
psy_maps/: __init__.py  _version.py  boxes.py  plotters.py  plugin.py  version.py
recipe/: meta.template
tests/: Stockholm.nc  _base_testing.py  circumpolar_test.nc  conftest.py  curvilinear-with-bounds.nc  get_ref_dir.py  icon_edge_test.nc  test_base.py  test_base_2d.py  test_plotters.py  test_plotters_combinedplotter.py  test_plotters_combinedplotter_2d.py  test_plotters_combinedplotter_circumpolar.py  test_plotters_combinedplotter_circumpolar_2d.py  test_plotters_combinedplotter_icon.py  test_plotters_combinedplotter_icon_2d.py  test_plotters_fieldplotter.py  test_plotters_fieldplotter_2d.py  test_plotters_fieldplotter_circumpolar.py  test_plotters_fieldplotter_circumpolar_2d.py  test_plotters_fieldplotter_contour.py  test_plotters_fieldplotter_contourf.py  test_plotters_fieldplotter_icon.py  test_plotters_fieldplotter_icon_2d.py  test_plotters_fieldplotter_icon_edge.py  test_plotters_vectorplotter.py  test_plotters_vectorplotter_2d.py  test_plotters_vectorplotter_circumpolar.py  test_plotters_vectorplotter_circumpolar_2d.py  test_plotters_vectorplotter_icon.py  test_plotters_vectorplotter_icon_2d.py  test_plotters_vectorplotter_stream.py  test_plotters_vectorplotter_stream_2d.py  test_projections.py
(+54 files in other folders)
